Connect Arduino board to Azure IoT Hub

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ AzureInfrastructure/.terraform/providers/registry.terraform.io/hashicorp/azurerm
 *.terraform.lock.hcl
 *.tfstate
 *.tfstate.backup
+.vscode/c_cpp_properties.json
